[package]
name = "nfs_r"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
bincode = "2.0.1"
clap = { version = "4.5.34", features = ["derive"] }

# Encryption 
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
argon2 = "0.5.3"
rand = "0.9.0"
hkdf = "0.12.4"
sha2 = "0.10.8"

# Error handling 
log = "0.4.27"
thiserror = "2.0.12"
env_logger = "0.11.7"

# OS shiz
nix = { version = "0.26.4", features = ["fs"] }
winapi = { version = "0.3.9", features = ["fileapi", "winbase"], optional = true }
ctrlc = "3.4.5"
chrono = "0.4.40"
futures = "0.3.31"
